--- a/.github/workflows/push_dev.yml
+++ b/.github/workflows/push_dev.yml
@@ -3,7 +3,7 @@ name: CI/CD Pipeline - Independent Jobs
 on:
   push:
     branches: 
-      - 'develop'
+      - 'main'
 
 permissions:
   id-token: write
